[package]
name = "axum-multi-middleware-order-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0"
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["full"] }
tower = "0.4.13"
